--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -1,6 +1,18 @@
 version: "3"
 
 services:
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file: .env
+    depends_on:
+      - database
+    networks:
+      - default
+    ports:
+      - "8081:8081"
+
   postgres:
     container_name: database
     image: postgres:14.2
