--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,6 +4,8 @@ logger:
 storage:
     type: "sql"
     url: "postgresql://postgres:postgres@db:5432/spa?sslmode=disable"
+#    url: "postgresql://postgres:postgres@localhost:54321/spa?sslmode=disable"
 http:
+#  host: "127.0.0.1"
   host: "0.0.0.0"
   port: "8081"
