--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,5 @@
 logger:
-  level: "info"
+  level: "debug"
   filename: "stderr"
 storage:
     type: "sql"
@@ -9,3 +9,5 @@ http:
 #  host: "127.0.0.1"
   host: "0.0.0.0"
   port: "8081"
+token:
+  key: "test"
