--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -2,11 +2,11 @@ FROM node:16.13.0 as client
 
 WORKDIR /app/client
 
-COPY ./client-posts-app/package.json /app/client
+COPY ./client-posts-app-for-server/package.json /app/client
+
+COPY ./client-posts-app-for-server /app/client
 
 RUN npm install
-
-COPY ./client-posts-app /app/client
 
 # RUN npm run build
 
