--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,20 +23,21 @@ services:
         context: .
         dockerfile: Dockerfile.mig
     restart: unless-stopped
+#    command: sh -c "sleep 25"
     networks:
       - default
 
-#  client:
-#    container_name: client
-#    build:
-#      context: .
-#      dockerfile: Dockerfile.client
-#    ports:
-#      - "3000:3000"
-#    networks:
-#      - default
-#    depends_on:
-#      - server
+  client:
+    container_name: client
+    build:
+      context: .
+      dockerfile: Dockerfile.client
+    ports:
+      - "3000:3000"
+    networks:
+      - default
+    depends_on:
+      - server
 
   server:
     container_name: server
@@ -44,6 +45,7 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: unless-stopped
+#    command: sh -c "sleep 25"
     depends_on:
       - database
     networks:
