--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -17,6 +17,18 @@ services:
     networks:
       - default
 
+  client:
+    container_name: client
+    build:
+      context: .
+      dockerfile: Dockerfile.client
+    ports:
+      - "3000:3000"
+    networks:
+      - default
+    depends_on:
+      - server
+
   migration:
     container_name: migration
     build:
